--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<p class="lefter"><a class="inside" href="#">Duis aute</a> irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<img src="https://2.downloader.disk.yandex.ru/preview/109206c55aa9875c5fffdfa0c00854a93d99f0dea728e38ce6fb09dbff85aae5/inf/Qf03slRaGykU79SbaC4T9GkB0UF26rV1Z1M1YoPHLoO_1bOiUkv8gCg0RBzHlPijlrFZnsXWDnQrAtbQYEX8VA%3D%3D?uid=314776729&filename=img.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=314776729&tknv=v2&size=920x958">
+					<img src="chair.jpg">
                     <h1 class="big">British people always brings more tea to the table</h1>
 					<p class="lefter">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt <a class="inside" href="#">ut labore et</a> dolore magna aliqua. Ut enim ad minim veniam,
