change html & css viewport

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=900">
 		<title>Classic</title>
 <link rel="stylesheet" href="Classic.css">
 	</head>
 	<body>
+		<div id="container">
 		<div id="wrapper">
 			<div id="header">
 				<h1 id="fine">Fine & Dine</h1>
@@ -58,5 +60,6 @@
 				<p class="contact">You're receiving this nwsletter because youbought widgets from us. Having trouble rading this email?<a class="inside" href="#">View it in your browser</a>. Not interested anymore?<a class="inside" href="#">Unsubscribe Instantly</a>.</br>abcWidgets and the abcWidets Logo are registered trademarks of abcWidgets Corp. ABCWidgets Corp - 123 Some Street, City, ST 99999. Ph +14 1477 89 45</p>
 			</div>
 		</div><!--End of wrapper-->
+	</div>
 	</body>
 </html>
